--- a/css.css
+++ b/css.css
@@ -3,10 +3,10 @@ body {
 font-size: 25px;
 font-family: verdana;
 	}
-.pass {
+#pass {
 	width: 500px;
 	height: 400px;
 	font-size: 25px;
 	margin: 25px;
 	padding: 25px;
-}
+} 
