--- a/css.css
+++ b/css.css
@@ -1,6 +1,56 @@
 * {
   font-family: sans-serif;
-  margin: 0px;
-  padding: 0px;
   }
-  
+#logo {
+		height: 60px;
+		width: 60px;
+		border-radius: 50%;
+		display: inline-block;
+		border: 2px solid red;
+		float: left;
+}
+
+#navbar li {
+		display: inline-block;
+		border: 1px solid black;
+		margin: 0px;
+		border-radius: 50%;
+		width: 150px;
+		position: relative;
+		left: 100px;
+}
+#navbar ol {,
+		display: inline-block;
+}
+#container { 
+	border: 2px solid black;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+}
+#navbar li a {
+		padding: 10px;
+		display: block;
+		border-radius: 50%;
+		text-align: center;
+}
+a {
+	background-color: skyblue;
+	color: white;
+}
+a:hover {
+		opacity: 50%;
+}
+.abox {
+	position: relative;
+	top: 100px;
+}
+h1 {
+	text-align: center;
+	border: 2px solid red;
+}
+.abox a {
+		font-size: 25px;
+		text-decoration: none;
+}
